# discordbot_maron

./: Cargo.toml  README.md
.github/actions/cache_cargo/: action.yml
.github/workflows/: Rust_CI.yml  rust.yml
src/: client.rs  commands.rs  emoji.rs  hook_functions.rs  lib.rs  main.rs
src/chrono/: get_time.rs
src/client/: command_counter.rs  shard_manage.rs
src/commands/: about.rs  ferris.rs  greet.rs  latency.rs  ping.rs
src/emoji/: bird.rs  cat.rs  dog.rs  emoji_struct.rs
src/hook_functions/: after.rs  before.rs  unknown_command.rs
